# Mimic-Node

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  install.sh
aur/: PKGBUILD  mimic-node.install
docs/: from-link-example.json
example/client/: config.json
overlay/etc/systemd/system/: mimic-node-apply.service  mimic-node-deploy.service  mimic-node-mount.service  mimic-node.path  mimic-node.service  mimic-node.timer
overlay/etc/systemd/system/sing-box.service.d/: mimic-overlay.conf
overlay/usr/share/mimic-node/: sni.txt
overlay/usr/share/mimic-node/default/: config.json
src/: cli.rs  commands.rs  config.rs  main.rs  paths.rs  utils.rs
src/commands/: keys.rs  net.rs  system.rs  user.rs  verify.rs
