[package]
name = "mimictl"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "http2",
  "native-tls",
] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
rand = "0.9"
base64 = "0.22"
regex = "1.12"
colored = "3.0"
hex = "0.4"

[features]
default = []
completions = ["clap_complete"]
